--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,92 +1,302 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-// .col-md-1, .col-md-2, .col-md-3, .col-md-4 {
-// 	margin: 0 auto;
-// }
-// .margintop {
-// 	margin: 3% auto 0 auto;
-// 	text-align: center;
-// }
-
-// #togglename {
-// 	height: 100px;
-// 		margin: 10px;
-// 	#bio {
-// 		background-size:  90% 90%;
-// 		background-position: center;
-// 		background-repeat: no-repeat;
-// 		display: none;
-// 		line-height: 25px;
-// 	}
-// }
-// #resume {
-// 	width: 150px;
-// 	height: 30px;
-// 	margin-top: 35px;
-// 	h2 {
-// 		margin: 0;
-// 	}
-//   &:hover {
-//   	font-size: 16.2px;
-//  		background: url("background.png");
-//  		background-size: 100% 100%;
-//  		background-repeat: no-repeat;
-//  		cursor: pointer;
-// 	}
-// }
-// #showresume {
-// 	position: fixed;
-// 	top: 0;
-// 	left: 0;
-// 	display: none;
-// 	width: 100%;
-// 	height: 100%;
-// 	overflow: scroll;
-// 	background-color: rgba(0,0,0,.9);
-// 	z-index: 2;
-//  img {
-//  	margin-bottom: 20px;
-//  	height: 90%;
-//  	width: auto;
-//  }
-// 	#close {
-// 		margin-left: 80%;
-// 		margin-top: 2%;
-// 		color: white;
-// 		font-size: 18px;
-// 		width: 20px;
-// 		height: 40px;
-// 		text-align: center;
-// 		background-color: rgba(200,200,200,0);
-// 		font-family: 'Ubuntu Condensed', sans-serif;
-// 		cursor: pointer;
-// 		border: none;
-// 		z-index: 3;
-// 	}
-// }
-
-
-// #projects h3{
-// 	cursor: pointer;
-// 	float: right;
-// 	font-size: 17px;
-// 	margin-top: 25px;
-// }
-
-
-// }
-
-
-
-// **********Second page**********
-
-
-// .bottomborder {
-// 	border-bottom: 1px solid black;
-// }
-
-// @media only screen and (max-width: 768px) {
-
-// }
+html {
+	height: 100%;
+}
+body {
+	height: 100%;
+	margin: 0;
+	position: relative;
+}
+.row {
+	margin: 0 auto;
+	text-align: center;
+}
+h2, h3, h4, h5, h6, li, p, a, button {
+	font-family: 'Droid Sans', sans-serif;
+}
+#home {
+	position: relative;
+	min-height: 100%;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	#heading {
+		background-image: url('ice.jpg');
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-attachment: fixed;
+		position: relative;
+		height: 100%;
+		margin: 0;
+		text-align: center;
+		.center {
+			margin: 50px auto 30px auto;
+			h1 {
+				font-weight: 400;
+				font-size: 50px;
+				margin: 0 auto;
+			}
+		}
+		h2 {
+			font-size: 22px;
+			font-weight: 900px;
+			margin: 0 auto;
+		}
+		
+		
+		p {
+			font-size: 15px;
+			font-weight: 400;
+			text-align: center;
+		}
+		#bio, #techskills {
+			box-shadow: 1px solid grey;
+			margin: 50px 20%;
+			padding: 20px;
+			line-height: 30px;
+			background-color: rgba(250,250,250,.7);
+		}
+		#techskills {
+			margin: 50px  30%;
+		}
+		.arrow {
+		  -moz-animation: bounce 2s infinite;
+		  -webkit-animation: bounce 2s infinite;
+		  animation: bounce 2s infinite;
+		  height: 50px;
+		  position: relative;
+		  bottom: 1%;
+		}
+		@keyframes bounce {
+		  0%, 20%, 50%, 80%, 100% {
+		    transform: translateY(0);
+		  }
+		  40% {
+		    transform: translateY(-30px);
+		  }
+		  60% {
+		    transform: translateY(-15px);
+		  }
+		}
+	}
+	#projects {
+		padding-bottom: 100px;
+		hr {
+			width: 80%;
+			margin: 0 auto;
+		}
+		h1 {
+			margin: 0 auto;
+			height: 100px;
+			padding-top: 50px;
+		}
+		.gotosite {
+			height: 100px;
+			a, button {
+				height: 20px;
+				width: 200px;
+				padding: 0;
+				padding-top: 1px;
+				margin: 0 auto;
+			}
+			a {
+				margin-top: 40px;
+			}
+		}
+		 
+		.col-md-5 {
+			text-align: center;
+			ul {
+				margin: 0 auto;
+			}
+		}
+	}
+	#contact {
+		background-image: url('ice2.jpg');
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-attachment: fixed;
+		position: relative;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		text-align: center;
+		padding-bottom: 100px;
+		h2 {
+			width: 100%;
+			margin: 0;
+			margin-bottom: 30px;
+			padding: 30px 0;
+			background-color: rgba(250,250,250,.6);
+		}
+		.row {
+			text-align: center;
+		}
+		h3 {
+			margin: 20px auto;
+			text-align: center;
+		}
+		#links {
+			width: 400px;
+			text-align: center;
+			margin: 0 auto;
+			.row {
+				margin: 20px auto;
+				text-align: center;
+			}
+			.linkimage {
+				width: 40px;
+				margin: 20px 20px;
+			}
+			.meetupimage {
+				width: 50px;
+				margin: 15px 20px;
+			}
+			
+		}
+		#resume {
+			width: 200px;
+			height: 25px;
+			margin: 20px auto;
+			button {
+				padding: 0;
+				padding-top: 1px;
+				margin: 0 auto;
+			}
+		  &:hover {
+		  	font-size: 16.2px;
+		 		background: url("background.png");
+		 		background-size: 100% 100%;
+		 		background-repeat: no-repeat;
+		 		cursor: pointer;
+			}
+		}
+		#showresume {
+			position: fixed;
+			top: 0;
+			left: 0;
+			display: none;
+			width: 100%;
+			height: 100%;
+			overflow: scroll;
+			background-color: rgba(0,0,0,.9);
+			z-index: 2;
+		 img {
+		 	margin-bottom: 20px;
+		 	height: 90%;
+		 	width: auto;
+		 }
+			#close {
+				margin-left: 80%;
+				margin-top: 2%;
+				color: white;
+				font-size: 18px;
+				width: 20px;
+				height: 40px;
+				text-align: center;
+				background-color: rgba(200,200,200,0);
+				// font-family: 'Ubuntu Condensed', sans-serif;
+				cursor: pointer;
+				border: none;
+				z-index: 3;
+			}
+		}
+	}
+.imagerow {
+	text-align: center;
+	height: 150px;
+	padding: 10px;
+}
+#datenightimage {
+	background-image: url("datenight.png");
+}
+#groundworkimage {
+	background-image: url("groundwork.png");
+}
+#wherenextimage {
+	background-image: url("wherenext.png");
+}
+.siteimages {
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 150px;
+	width: 250px;
+	margin: 0 auto;
+	
+	padding: 0;
+	h4 {
+		margin-top:50px;
+		display: none;
+		font-shadow: 1px 1px white;
+	}
+	&:hover {
+		cursor: pointer;
+		width: 260px;
+		h4 {
+			display: inline-block;
+		}
+	}
+}
+.video {
+	position: fixed;
+	max-width: 60%;
+	top: 10%;
+	left: 20%;
+	z-index: 1;
+	border: 1px solid rgba(0,0,0,.8);
+	border-right: 2px solid rgba(0,0,0,.8);
+}
+#datenightvideo, #groundworkvideo, #wherenextvideo {
+	display: none;
+}
+.close {
+	display: none;
+	position: fixed;
+	right: 21%;
+	top: 11%;
+	// font-family: 'Ubuntu Condensed', sans-serif;
+	cursor: pointer;
+	z-index: 2;
+}
+.projectlist {
+	text-align: center;
+	padding: 20px;
+	padding-bottom: 50px;
+	.row {
+		text-align: center;
+		margin: 0;
+	}
+	h3 {
+		margin: 0 auto;
+		color: black;
+	}
+	p {
+		margin: 15px auto;
+		font-size: 13px;
+		text-align: center;
+		width: 90%;
+	}
+	li, p {
+		padding: 0 10px;
+		// font-family: 'Ubuntu Condensed', sans-serif;
+		font-weight: 400;
+	}
+	li {
+		font-size: 15px;
+		text-align: left;
+	}
+	ul {
+		margin: 0 auto;
+		margin-top: 20px;
+	}
+	.githublink {
+		width: 25px;
+		margin-left: 20px;
+	}
+}
+}
