small font change

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -126,7 +126,7 @@ h2, h3, h4, h5, h6, li, p, a, button {
 		left: 0;
 		text-align: center;
 		padding-bottom: 100px;
-		h2 {
+		h1 {
 			width: 100%;
 			margin: 0;
 			margin-bottom: 30px;
@@ -137,6 +137,7 @@ h2, h3, h4, h5, h6, li, p, a, button {
 			text-align: center;
 		}
 		h3 {
+			font-size: 16px;
 			margin: 20px auto;
 			text-align: center;
 		}
