text shadow first box and grammar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
 				<h2>Web Developer | Designer</h2>
 			</div>
 		<div class="row" id="bio">
-			<p>A business-minded full stack web developer with experience in sales and management. Who is constantly learning new development languages, and enjoys working with new API's when possible.</p>
+			<p>A business-minded full stack web developer with experience in sales and management. Who is constantly learning new programming languages, and enjoys working with new API's when possible.</p>
 		</div>
 		<div class="row" id="techskills">
 			<p>Fluent in Ruby on Rails & Sinatra, SQL, Javascript (Vanilla and JQuery), HTML, CSS & SCSS</p>
