--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -75,6 +75,7 @@ a {
 			font-size: 15px;
 			font-weight: 400;
 			text-align: center;
+			text-shadow: 1px 1px white;
 		}
 		#bio, #techskills {
 			box-shadow: 1px solid grey;
@@ -287,7 +288,7 @@ a {
 			width: 100%;
 			height: 100%;
 			overflow: scroll;
-			background-color: rgba(0,0,0,.9);
+			background-color: rgba(53,53,53,.9);
 			z-index: 2;
 		 img {
 		 	margin-bottom: 20px;
@@ -299,13 +300,15 @@ a {
 				margin-top: 2%;
 				color: white;
 				font-size: 18px;
-				width: 20px;
-				height: 40px;
+				width: 30px;
+				height: 30px;
 				text-align: center;
 				background-color: rgba(200,200,200,0);
 				cursor: pointer;
 				border: none;
 				z-index: 3;
+				padding-top: 3px;
+				padding-left: 9px;
 			}
 		}
 	}
