--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -119,11 +119,11 @@ a {
 		}
 		h1 {
 			margin: 0 auto;
-			height: 100px;
-			padding-top: 50px;
+			height: 140px;
+			padding: 50px 0;
 		}
 		.gotosite {
-			height: 100px;
+			height: 80px;
 			a, button {
 				height: 20px;
 				width: 200px;
