change resume and small edit of bio

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 			<p>A business-minded full stack web developer with experience in sales and management. Who is constantly learning new programming languages, and enjoys working with new API's when possible.</p>
 		</div>
 		<div class="row" id="techskills">
-			<p>Fluent in Ruby on Rails & Sinatra, SQL, Javascript (Vanilla and JQuery), HTML, CSS & SCSS</p>
+			<p>Fluent in Ruby (Rails & Sinatra), SQL, Javascript (Vanilla and JQuery),  CSS (including SCSS), and HTML</p>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
