--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,10 +7,12 @@
 }
 html {
 	height: 100%;
+	overflow-x: hide;
 }
 body {
 	height: 100%;
 	position: relative;
+	overflow-x: hide;
 }
 h1 {
 		font-family: 'Playfair Display SC', serif;
@@ -47,13 +49,9 @@ a {
 // First box - Name and Bio
 
 	#heading {
-		background-image: url('ice.jpg');
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center;
-		background-attachment: fixed;
 		position: relative;
 		height: 100%;
+		min-height: 700px;
 		margin: 0;
 		text-align: center;
 		.center {
@@ -69,31 +67,45 @@ a {
 			font-weight: 900px;
 			margin: 0 auto;
 		}
-		
-		
 		p {
 			font-size: 15px;
 			font-weight: 400;
 			text-align: center;
 			text-shadow: 1px 1px white;
 		}
-		#bio, #techskills {
-			box-shadow: 1px solid grey;
-			margin: 50px 20%;
-			padding: 20px;
-			line-height: 30px;
-			background-color: rgba(250,250,250,.7);
+		.bio {
+			margin: 50px auto;
+			text-align: center;
+			p {
+				font-size: 18px;
+				text-shadow: none;
+				line-height: 30px;
+				margin: 30px auto 0 auto;
+				width: 500px;
+			}
+			p em {
+				font-size: 13px;
+				width: 300px;
+				position: absolute;
+				right: 20%;
+			}
+			pre {
+				text-align: right;
+				font-size: 13px;
+				position: absolute;
+				right: 20%;
+				top: 120px;
+				font-weight: 400;
+			}
 		}
-		#techskills {
-			margin: 50px  30%;
-		}
+		
+		
 		.arrow {
 		  -moz-animation: bounce 2s infinite;
 		  -webkit-animation: bounce 2s infinite;
 		  animation: bounce 2s infinite;
 		  height: 50px;
-		  position: relative;
-		  bottom: 1%;
+		  margin-top: 10%;
 		}
 		@keyframes bounce {
 		  0%, 20%, 50%, 80%, 100% {
@@ -109,18 +121,49 @@ a {
 	}
 
 
-// Second box - Sites and Projects
+
+
+	// Second box: skills and experience
+
+	#techskills {
+		background-color: black;
+		h2 {
+			margin: 50px 0;
+			font-family: 'Playfair Display SC', serif;
+			text-shadow: none;
+			color: white;
+		}
+		ul {
+			margin-bottom: 50px;
+			li {
+				list-style: none;
+				font-weight: 800;
+				line-height: 30px;
+				font-size: 13px;
+				text-shadow: none;
+				color: white;
+			}
+		}
+	}
+
+
+
+
+// Third box - Sites and Projects
 
 	#projects {
 		padding-bottom: 100px;
 		hr {
 			width: 80%;
 			margin: 0 auto;
+			color:black;
 		}
-		h1 {
+		h2 {
 			margin: 0 auto;
 			height: 140px;
 			padding: 50px 0;
+			color: black;
+			font-family: 'Playfair Display SC', serif;
 		}
 		.gotosite {
 			height: 80px;
@@ -133,6 +176,7 @@ a {
 			}
 			a {
 				margin-top: 40px;
+				color: black;
 			}
 		}
 		.projectlist {
@@ -156,6 +200,7 @@ a {
 			li, p {
 				padding: 0 10px;
 				font-weight: 400;
+				color: black;
 			}
 			li {
 				font-size: 15px;
@@ -219,23 +264,20 @@ a {
 // Third box - Contact & Links
 
 	#contact {
-		background-image: url('ice2.jpg');
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center;
-		background-attachment: fixed;
+		background-color: black;
 		position: relative;
 		bottom: 0;
 		right: 0;
 		left: 0;
 		text-align: center;
 		padding-bottom: 100px;
-		h1 {
+		h2 {
 			width: 100%;
 			margin: 0;
 			margin-bottom: 30px;
 			padding: 30px 0;
-			background-color: rgba(250,250,250,.6);
+			font-family: 'Playfair Display SC', serif;
+			color: white;
 		}
 		.row {
 			text-align: center;
@@ -244,6 +286,8 @@ a {
 			font-size: 20px;
 			margin: 20px auto;
 			text-align: center;
+			color: white;
+			font-weight: 400;
 		}
 		#links {
 			width: 400px;
@@ -271,7 +315,7 @@ a {
 				padding: 0;
 				padding-top: 1px;
 				margin: 0 auto;
-				background-color: rgba(250,250,250,.5);
+				background-color: rgba(250,250,250,1);
 				border: none;
 				&:hover {
 			  	background-color: rgba(250,250,250,.7);
