--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
+
+<!-- first box -->
+
 <div class="row" id="heading">
 	<div class="col-md-12">
 		<div class="row center">
@@ -24,6 +27,8 @@
 	</div>
 </div>
 
+<!-- Technical skills and experience -->
+
 <div id="techskills">
 	<div class="row">
 		<h2 class="col-md-12">Technical Skills & Experience</h2>
@@ -48,7 +53,7 @@
 </div>
 
 
-
+<!-- Project box -->
 
 <div class="row" id="projects">
 	<div class="col-md-12">
@@ -138,6 +143,12 @@
 		</div>
 	</div>
 </div>
+
+
+
+
+<!-- Contact box-->
+
 <div class="row" id="contact">
 	<div class="col-md-12">
 		<h2>Contact & Links</h2>
@@ -159,7 +170,7 @@
 		</div>
 		<div id="showresume">
 			<button id="close">X</button>
-			<%= image_tag "resume.png" %>
+			<%= image_tag "resumeimage.png" %>
 		</div>
 		<div class="row">
 			<h3>hans@hspalacios.com</h3>
