video and groundwork update

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -230,7 +230,7 @@ a {
 			background-image: url("datenight.png");
 		}
 		#groundworkimage {
-			background-image: url("groundwork.png");
+			background-image: url("groundworkimage2.png");
 		}
 		#wherenextimage {
 			background-image: url("wherenext.png");
