small detail edit

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -99,7 +99,7 @@
 		    		<li>Built out using Ruby on Rails, SQL, Javascript, bootstrap and SCSS</li>
 		    		<li>Worked with client directly and worked through or compromised with multiple design changes</li>
 		    		<li>Embedded images from Instagram using Instafeed</li>
-		    		<li>Admin Site with the ability to edit all textboxes, including pricing, contact information, and mission statement</li>
+		    		<li>Admin Site with the ability to edit all textboxes, including pricing and contact information</li>
 		    	</ul>
 		    </div>
 		  </div>
