fix open resume button

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -166,7 +166,7 @@
 		  </div>
 		</div>		
 		<div class="row" id="resume">
-				<button>Open Resume</button>
+				<button id="openresume">Open Resume</button>
 				<%= link_to download_pdf_path(:format => 'pdf'), target: :_blank, :title => "Download PDF" do %>
 					<%= image_tag "downloadicon.png", :id => "downloadicon" %>
 				<% end %>
