--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,11 +19,14 @@
 				<pre>-  Ryan Freitas</pre>
 			</div>
 		</div>
+		<br class="mobileonly">
+		<br class="mobileonly">
 		<div class="row">
 			<div class="col-md-12">
 				<%= image_tag "arrow.png", :class => "arrow" %>
 			</div>
 		</div>
+		<br class="mobileonly">
 	</div>
 </div>
 
