edit media query

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -25,4 +25,12 @@
 			font-size: 10px;
 		}
 	}
+	hr {
+		height: 4px;
+		background-color: black;
+	}
+	#home #projects .projectlist {
+		padding-left: 10%;
+		padding-right: 10%;
+	}
 }
