--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -33,4 +33,17 @@
 		padding-left: 10%;
 		padding-right: 10%;
 	}
+	#home #techskills {
+		padding-bottom: 30px;
+		h2 {
+			font-size: 15px;
+		}
+		ul {
+			margin-bottom: 20px;
+			li {
+				line-height: 20px;
+				font-size: 10px;
+			}
+		}
+	}
 }
