contact mobile view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,7 +80,7 @@
 		   	</div>
 	   	</div>
 	   	<div class="col-md-4">
-		 		<div class="row gotosite"></div>
+		 		<div class="row gotosite hidemobile"></div>
 		   	<div class="row imagerow">
 	   				<div id="datenightimage" class="siteimages"><h4>Play<br>Video</h4></div>
 	   		</div>
@@ -138,7 +138,7 @@
     		</div>
     	</div>
 		 	<div class="col-md-4">
-		 		<div class="row gotosite"></div>
+		 		<div class="row gotosite hidemobile"></div>
 		  	<div class="row imagerow">
     			<div id="wherenextimage", class="siteimages"><h4>Play<br>Video</h4></div>
     		</div>
