--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 		<div class="row bio">
 			<div class="col-md-5"></div>
 			<div class="col-md-7">
-				<p class="row"><em>“Your reputation is more important than your paycheck, and your integrity is worth more than your career.”</em></p>
+				<p class="row quote "><em>“Your reputation is more important than your paycheck, and your integrity is worth more than your career.”</em></p>
 				<pre>-  Ryan Freitas</pre>
 			</div>
 		</div>
