--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -211,7 +211,9 @@ a {
 				text-align: left;
 			}
 			ul {
-				margin: 0 auto;
+				// width: 80%;
+				text-align: left;
+				margin-left: 10%;
 				margin-top: 20px;
 			}
 			.githublink {
