--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
 		<br class="mobileonly">
 		<div class="row">
 			<div class="col-md-12">
-				<%= image_tag "arrow.png", :class => "arrow" %>
+				<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/arrow.png", :class => "arrow" %>
 			</div>
 		</div>
 		<br class="mobileonly">
@@ -66,7 +66,7 @@
   		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-   				<h3>DateNight<%= link_to "https://github.com/HansPalacios/datenight", :target => "_blank" do %><%= image_tag "githublogo.png", :class=> "githublink"%><% end %></h3>
+   				<h3>DateNight<%= link_to "https://github.com/HansPalacios/datenight", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
 	   		</div>
 	   		<div class="row">
 	    		<p>An app which gives users access to a database of great venues for different types of dates</p>
@@ -92,7 +92,7 @@
    		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-    			<h3>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %><%= image_tag "githublogo.png", :class=> "githublink"%><% end %></h3>
+    			<h3>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
 	    	</div>
 	    	<div class="row">
 		    	<p>A custom designed website for an auto detailing company in Connecticut</p>
@@ -124,7 +124,7 @@
    		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-    			<h3>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %><%= image_tag "githublogo.png", :class=> "githublink"%><% end %></h3>
+    			<h3>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
 	    	</div>
 	    	<div class="row">
 		    	<p>An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
@@ -159,25 +159,25 @@
 		<div class="row">
 			<div id="links">
 				<%= link_to "https://github.com/HansPalacios", target: :_blank do %>
-		    	<%= image_tag "whitegithub.png", :class => "linkimage" %>
+		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/whitegithub.png", :class => "linkimage" %>
 		   	<% end %>
 				<%= link_to "https://www.linkedin.com/in/hspalacios/", target: :_blank do %>
-		    	<%= image_tag "linkedinlogo.png", :class => "linkimage" %>
+		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/linkedinlogo.png", :class => "linkimage" %>
 		   	<% end %>
 				<%= link_to "https://www.meetup.com/members/228689923/", target: :_blank do %>
-		    	<%= image_tag "meetuplogo.png", :class => "meetupimage" %>
+		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/meetuplogo.png", :class => "meetupimage" %>
 		   	<% end %>	
 		  </div>
 		</div>		
 		<div class="row" id="resume">
 				<button id="openresume">Open Resume</button>
 				<%= link_to download_pdf_path(:format => 'pdf'), target: :_blank, :title => "Download PDF" do %>
-					<%= image_tag "downloadicon.png", :id => "downloadicon" %>
+					<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/downloadicon.png", :id => "downloadicon" %>
 				<% end %>
 		</div>
 		<div id="showresume">
 			<button id="close">X</button>
-			<%= image_tag "resumeimage.png" %>
+			<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/resumeimage.png" %>
 		</div>
 		<div class="row">
 			<h3>hans@hspalacios.com</h3>
