--- a/app/views/layouts/_videos.html.erb
+++ b/app/views/layouts/_videos.html.erb
@@ -1,6 +1,6 @@
 <div class="close" id="close2"><strong>X</strong></div>
- <%= video_tag(["datenight540.mp4"], :controls => true, :class => "video", :id => "datenightvideo") %>
+ <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/DatenightOfficialDemo.mov"], :controls => true, :class => "video", :id => "datenightvideo") %>
  <div class="close" id="close3"><strong>X</strong></div>
- <%= video_tag(["groundworkdemo3.mp4"], :controls => true, :class => "video", :id => "groundworkvideo") %>
+ <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/GroundworkOfficialDemo.mov"], :controls => true, :class => "video", :id => "groundworkvideo") %>
   <div class="close" id="close4"><strong>X</strong></div>
- <%= video_tag(["wherenext540.mp4"], :controls => true, :class => "video", :id => "wherenextvideo") %>
+ <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/wherenext720.mp4"], :controls => true, :class => "video", :id => "wherenextvideo") %>
