--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,10 +46,11 @@
 			<li>HTML</li>
 		</ul>
 		<ul class="col-md-4">
-			<li>Instagram integration into website</li>
+			<li>Social media integration into website</li>
 			<li>Google Maps API</li>
 			<li>Soundcloud API</li>
-			<li>Zapier.com</li>
+			<li>Heroku</li>
+			<li>Cloudflare</li>
 		</ul>
 		<div class="col-md-2"></div>
 	</div>
@@ -62,6 +63,49 @@
 	<div class="col-md-12">
     <h2>Websites & Projects</h2>
     <hr>
+
+
+
+
+    <div class="row projectlist">
+  		<div class="col-md-2"></div>
+  		<div class="col-md-4">
+  			<div class="row">
+   				<h3>Velveteen Ensemble<%= link_to "https://github.com/HansPalacios/VelveteenEnsemble", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
+	   		</div>
+	   		<div class="row">
+	    		<p>A company that books musicians in multiple cities for weddings, corporate events, and can be booked for concerts, tours, and recording sessions.</p>
+	    	</div>
+	    	<div class="row">
+		    	<ul>
+		   			<li>Built using SQL, Ruby on Rails, JavaScript and Jquery, SCSS, and HTML</li>
+		   			<li>Integrated Instagram, Youtube, and Facebook into site so certain information updates automatically.</li>
+		   			<li>Using Heroku for Hosting, and Cloudflare for managing the DNS and SSL</li>
+		   			<li>Using Sendgrid for messaging, as well as multiple widgets from review sites to show current reviews from clients</li>
+		   		</ul>
+		   	</div>
+	   	</div>
+	   	<div class="col-md-4">
+		 		<div class="row gotosite">
+				  <%= link_to "https://www.velveteenensemble.com", :target => "_blank" do %>
+						<button>Go to site</button>
+					<% end %>
+				</div>
+		   	<div class="row imagerow">
+	   				<div id="velveteenimage" class="siteimages"><h4>Play<br>Video</h4></div>
+	   		</div>
+	   	</div>
+   		<div class="col-md-2"></div>
+   	</div>
+   	<hr>
+
+
+
+
+
+
+
+
    	<div class="row projectlist">
   		<div class="col-md-2"></div>
   		<div class="col-md-4">
@@ -109,9 +153,6 @@
 		  </div>
 	   	<div class="col-md-4">
 	   		<div class="row gotosite">
-				  <%= link_to "https://www.groundworkdetailing.com", :target => "_blank" do %>
-						<button>Go to site</button>
-					<% end %>
 				</div>
 		  	<div class="row imagerow">
 	   			<div id="groundworkimage" class="siteimages"><h4>Play<br>Video</h4></div>
@@ -164,8 +205,8 @@
 				<%= link_to "https://www.linkedin.com/in/hspalacios/", target: :_blank do %>
 		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/linkedinlogo.png", :class => "linkimage" %>
 		   	<% end %>
-				<%= link_to "https://www.meetup.com/members/228689923/", target: :_blank do %>
-		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/meetuplogo.png", :class => "meetupimage" %>
+				<%= link_to "https://www.instagram.com/hpwebsites/", target: :_blank do %>
+		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/instagramlogo.png", :class => "meetupimage" %>
 		   	<% end %>	
 		  </div>
 		</div>		
