removed text shadow and shortened name

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="row" id="heading">
 	<div class="col-md-12">
 		<div class="row center">
- 			<h1>Hans-Sebastian Palacios</h1>
+ 			<h1>Hans Palacios</h1>
 		</div>
 		<div class="row">
 				<h2>Web Developer | Designer</h2>
@@ -224,7 +224,7 @@
 			<h3>hans@hspalacios.com</h3>
 		</div>
 		<div class="row">
-			<h3>(860)204-7995</h3>
+			<!-- <h3>(860)204-7995</h3> -->
 		</div>
 	</div>
 </div>
