--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,14 +20,15 @@ h1 {
 h2, h3, h4, h5, h6, a, button, li, p, pre {
 	font-family: 'Droid Sans', sans-serif;
 	color: black;
+	text-shadow: none;
 }
 h4 {
 	font-weight: 900;
 	display: inline-block;
 }
 p, pre, .projectlist li, a {
-	font-size: 13px;
-	font-weight: 800;
+	font-size: 15px;
+	// font-weight: 800;
 }
 a {
 	text-decoration: none;
@@ -72,7 +73,7 @@ a {
 			margin: 0 auto;
 		}
 		p {
-			font-size: 15px;
+			font-size: 13px;
 			font-weight: 400;
 			text-align: center;
 			text-shadow: 1px 1px white;
@@ -81,7 +82,7 @@ a {
 			margin: 50px auto;
 			text-align: center;
 			p {
-				font-size: 18px;
+				font-size: 15px;
 				text-shadow: none;
 				line-height: 30px;
 				margin: 30px auto 0 auto;
@@ -141,7 +142,7 @@ a {
 			margin-bottom: 50px;
 			li {
 				list-style: none;
-				font-weight: 800;
+				font-weight: 400;
 				line-height: 30px;
 				font-size: 13px;
 				text-shadow: none;
