--- a/app/views/layouts/_videos.html.erb
+++ b/app/views/layouts/_videos.html.erb
@@ -1,6 +1,8 @@
 <div class="close" id="close2"><strong>X</strong></div>
- <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/DatenightOfficialDemo.mov"], :controls => true, :class => "video", :id => "datenightvideo") %>
+ <%= video_tag(["https://d3758y7jd65doi.cloudfront.net/DatenightOfficialDemo.mov"], :controls => true, :class => "video", :id => "datenightvideo") %>
  <div class="close" id="close3"><strong>X</strong></div>
- <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/GroundworkOfficialDemo.mov"], :controls => true, :class => "video", :id => "groundworkvideo") %>
+ <%= video_tag(["https://d3758y7jd65doi.cloudfront.net/GroundworkOfficialDemo.mov"], :controls => true, :class => "video", :id => "groundworkvideo") %>
   <div class="close" id="close4"><strong>X</strong></div>
- <%= video_tag(["https://s3.us-east-2.amazonaws.com/hspalacios/wherenext720.mp4"], :controls => true, :class => "video", :id => "wherenextvideo") %>
+ <%= video_tag(["https://d3758y7jd65doi.cloudfront.net/wherenext720.mp4"], :controls => true, :class => "video", :id => "wherenextvideo") %>
+ <div class="close" id="close5"><strong>X</strong></div>
+ <%= video_tag(["https://d3758y7jd65doi.cloudfront.net/Velveteendemo.mp4"], :controls => true, :class => "video", :id => "velveteenvideo") %>
