--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
  			<h1>Hans Palacios</h1>
 		</div>
 		<div class="row">
-				<h2>Web Developer | Designer</h2>
+				<h2>Web Designer | Developer</h2>
 			</div>
 		<div class="row bio">
 			<p>A business-oriented full stack web developer with experience in sales and management. </p>
@@ -23,7 +23,7 @@
 		<br class="mobileonly">
 		<div class="row">
 			<div class="col-md-12">
-				<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/arrow.png", :class => "arrow" %>
+				<%= image_tag "https://d3758y7jd65doi.cloudfront.net/arrow.png", :class => "arrow" %>
 			</div>
 		</div>
 		<br class="mobileonly">
@@ -71,10 +71,10 @@
   		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-   				<h3>Velveteen Ensemble<%= link_to "https://github.com/HansPalacios/VelveteenEnsemble", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
+   				<h3>Velveteen Ensemble<%= link_to "https://github.com/HansPalacios/VelveteenEnsemble", :target => "_blank" do %><%= image_tag "https://d3758y7jd65doi.cloudfront.net/githublogo.png", :class=> "githublink"%><% end %></h3>
 	   		</div>
 	   		<div class="row">
-	    		<p>A company that books musicians in multiple cities for weddings, corporate events, and can be booked for concerts, tours, and recording sessions.</p>
+	    		<p>A company that books musicians in multiple cities for weddings, corporate events, and concerts among other venues.</p>
 	    	</div>
 	    	<div class="row">
 		    	<ul>
@@ -136,7 +136,7 @@
    		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-    			<h3>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
+    			<h3>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %><%= image_tag "https://d3758y7jd65doi.cloudfront.net/githublogo.png", :class=> "githublink"%><% end %></h3>
 	    	</div>
 	    	<div class="row">
 		    	<p>A custom designed website for an auto detailing company in Connecticut</p>
@@ -165,7 +165,7 @@
    		<div class="col-md-2"></div>
   		<div class="col-md-4">
   			<div class="row">
-    			<h3>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %><%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/githublogo.png", :class=> "githublink"%><% end %></h3>
+    			<h3>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %><%= image_tag "https://d3758y7jd65doi.cloudfront.net/githublogo.png", :class=> "githublink"%><% end %></h3>
 	    	</div>
 	    	<div class="row">
 		    	<p>An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
@@ -200,25 +200,25 @@
 		<div class="row">
 			<div id="links">
 				<%= link_to "https://github.com/HansPalacios", target: :_blank do %>
-		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/whitegithub.png", :class => "linkimage" %>
+		    	<%= image_tag "https://d3758y7jd65doi.cloudfront.net/whitegithub.png", :class => "linkimage" %>
 		   	<% end %>
 				<%= link_to "https://www.linkedin.com/in/hspalacios/", target: :_blank do %>
-		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/linkedinlogo.png", :class => "linkimage" %>
+		    	<%= image_tag "https://d3758y7jd65doi.cloudfront.net/linkedinlogo.png", :class => "linkimage" %>
 		   	<% end %>
 				<%= link_to "https://www.instagram.com/hpwebsites/", target: :_blank do %>
-		    	<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/instagramlogo.png", :class => "meetupimage" %>
+		    	<%= image_tag "https://d3758y7jd65doi.cloudfront.net/instagramlogo.png", :class => "meetupimage" %>
 		   	<% end %>	
 		  </div>
 		</div>		
 		<div class="row" id="resume">
 				<button id="openresume">Open Resume</button>
 				<%= link_to download_pdf_path(:format => 'pdf'), target: :_blank, :title => "Download PDF" do %>
-					<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/downloadicon.png", :id => "downloadicon" %>
+					<%= image_tag "https://d3758y7jd65doi.cloudfront.net/downloadicon.png", :id => "downloadicon" %>
 				<% end %>
 		</div>
 		<div id="showresume">
 			<button id="close">X</button>
-			<%= image_tag "https://s3.us-east-2.amazonaws.com/hspalacios/resumeimage.png" %>
+			<%= image_tag "https://d3758y7jd65doi.cloudfront.net/resumepic.jpg" %>
 		</div>
 		<div class="row">
 			<h3>hans@hspalacios.com</h3>
